# ava-open-harness

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  openwiki-update.yml
docs/: HARNESS_SPEC.md
examples/: minimal_eval.py
harness/: __init__.py  __main__.py  common.py  registry.py  runner.py
harness/evals/: __init__.py  frontier_rubric.py  jspace_tests.py  needle.py  openwiki_knowledge.py  perplexity.py  probes.py
harness/tasks/: france_china.yaml  frontier_rubric.yaml  jspace_all.yaml  needle.yaml  openwiki_knowledge.yaml  perplexity.yaml  probes.yaml  safety_blackmail.yaml  soccer_rugby.yaml  spanish_french.yaml  spider_ant.yaml
tests/: test_no_mock.py  test_runner.py
